@@ -33,6 +33,22 @@ $CMD $INF > $OUTF
 diff -q -s $REFF $OUTF 
 echo --------------------------
 
+echo ATTRIBUTION
+CMD="../../tools/rst2latex.py --attribution=none"
+INF=test/attribution.txt
+OUTF="$INF-none-attribution.tex"
+REFF="$OUTF.ref"
+$CMD $INF > $OUTF
+diff -q -s $REFF $OUTF 
+
+CMD="../../tools/rst2latex.py --attribution=parens"
+INF=test/attribution.txt
+OUTF="$INF-parens-attribution.tex"
+REFF="$OUTF.ref"
+$CMD $INF > $OUTF
+diff -q -s $REFF $OUTF 
+
+echo --------------------------
 #CMD="../../tools/rst2latex.py --snap-footnote-refs=1"
 #CMD="../../tools/rst2latex.py --footnote-references=superscript"
 #CMD="../../tools/rst2latex.py --documentclass=book --hyperlink-color=0"
